--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -663,6 +663,42 @@ a:focus {
       .header__title-sub.active {
         opacity: 1;
         transform: translateY(0); }
+  .header #menu-item-186 {
+    position: relative;
+    cursor: pointer; }
+    .header #menu-item-186.active::after {
+      top: -30px; }
+  .header .sub-menu {
+    position: absolute;
+    top: 47px;
+    left: -6px;
+    width: 310px;
+    background-color: #FDE358;
+    padding: 20px 30px;
+    border-radius: 15px;
+    box-shadow: 0 0 10px 0 rgba(189, 135, 29, 0.6);
+    transform-origin: top left;
+    transform: scale(0);
+    transition: all .3s ease-in-out; }
+    .header .sub-menu .menu-item:first-child {
+      margin-bottom: 10px; }
+    .header .sub-menu .menu-item::after {
+      display: none; }
+    .header .sub-menu .menu-item:hover {
+      color: #bd871d; }
+    .header .sub-menu .menu-item a {
+      display: inline-block;
+      width: 100%; }
+    .header .sub-menu.active {
+      transform: scale(1); }
+
+@media screen and (max-width: 1199px) {
+  .header__logo-link {
+    max-width: 225px; }
+  .header__items .menu-item {
+    margin-right: 20px; }
+    .header__items .menu-item::after {
+      height: 72px; } }
 
 @media screen and (max-width: 992px) {
   .header__nav {
@@ -684,7 +720,7 @@ a:focus {
     height: 100%;
     display: flex;
     align-items: center;
-    justify-content: center;
+    padding-top: 150px;
     flex-direction: column;
     opacity: 0;
     transform: translateX(-20px);
@@ -699,26 +735,86 @@ a:focus {
       top: 0;
       left: 0;
       width: 0;
-      height: 100%;
+      height: 55px;
       background-color: #fff;
       border-radius: 0 10px 10px 0; }
+    .header .menu-item:hover::after {
+      top: 0;
+      width: 100%; }
   .header .menu,
   .header .menu__main {
     height: 100%; }
   .header .current-menu-item::after {
-    width: 100%; }
+    width: 100%;
+    top: 0; }
   .header .menu-btn {
     position: relative;
     display: flex;
     z-index: 9999; }
   .header__bottom {
-    margin-left: 0; } }
+    margin-left: 0; }
+  .header #menu-item-186 {
+    position: relative;
+    cursor: pointer;
+    text-align: center; }
+    .header #menu-item-186::after {
+      display: none; }
+    .header #menu-item-186 a {
+      position: relative;
+      z-index: 1;
+      padding: 0 10px; }
+      .header #menu-item-186 a::after {
+        content: '';
+        position: absolute;
+        top: -10px;
+        left: 0;
+        width: 0;
+        height: 55px;
+        background-color: #fff;
+        border-radius: 0 10px 10px 0;
+        transition: all .2s ease-in-out;
+        z-index: -1; }
+      .header #menu-item-186 a:hover::after {
+        width: 100%; }
+  .header .sub-menu {
+    position: relative;
+    top: auto;
+    bottom: 0;
+    left: -0;
+    width: 100%;
+    background-color: rgba(223, 177, 52, 0.95);
+    padding: 0;
+    border-radius: 15px;
+    box-shadow: 0 0 10px 0 rgba(189, 135, 29, 0.6);
+    transform-origin: top center;
+    transform: scale(1);
+    transition: all .3s ease-in-out;
+    height: 0;
+    overflow: hidden; }
+    .header .sub-menu .menu-item {
+      text-align: center;
+      padding-left: 20px;
+      padding-right: 20px; }
+      .header .sub-menu .menu-item a::after {
+        display: none; }
+      .header .sub-menu .menu-item:first-child {
+        margin-bottom: 0; }
+      .header .sub-menu .menu-item::after {
+        display: none; }
+      .header .sub-menu .menu-item:hover {
+        color: #bd871d; }
+      .header .sub-menu .menu-item a {
+        display: inline-block;
+        width: 100%; }
+    .header .sub-menu.active {
+      height: 120px;
+      transform: translateY(23px); } }
 
 @media screen and (max-width: 768px) {
   .header {
     height: 570px; }
     .header__nav.active {
-      width: 60%; }
+      width: 70%; }
     .header__bottom {
       margin-top: 35px; }
     .header__title {
@@ -731,6 +827,8 @@ a:focus {
 @media screen and (max-width: 576px) {
   .header {
     height: 385px; }
+    .header__items {
+      padding-top: 50px; }
     .header__nav.active {
       width: 100%;
       border-radius: 0; }
@@ -745,6 +843,10 @@ a:focus {
       line-height: 30px; }
       .header__title br {
         display: none; } }
+
+@media screen and (max-width: 400px) {
+  .header .sub-menu.active {
+    height: 140px; } }
 
 @media screen and (max-width: 374px) {
   .header {
