--- a/resources/scss/layout/_header.scss
+++ b/resources/scss/layout/_header.scss
@@ -112,6 +112,69 @@
             }
         }
     }
+
+    #menu-item-186 {
+        position: relative;
+        cursor: pointer;
+        &.active {
+        &::after {
+            top: -30px;
+        }
+    }
+    }
+    .sub-menu {
+        position: absolute;
+        top: 47px;
+        left: -6px;
+        width: 310px;
+        background-color: #FDE358;
+        padding: 20px 30px;
+        border-radius: 15px;
+        box-shadow: 0 0 10px 0 rgba(189, 135, 29, .6);
+        transform-origin: top left;
+        transform: scale(0);
+        transition: all .3s ease-in-out;
+        .menu-item {
+            &:first-child {
+                margin-bottom: 10px;
+            }
+            &::after {
+                display: none;
+            }
+            &:hover {
+                color: rgb(189, 135, 29);
+            }
+
+            a {
+                display: inline-block;
+                width: 100%;
+            }
+        }
+
+        &.active {
+            transform: scale(1);
+        }
+    }
+}
+
+
+
+@media screen and (max-width: $xl - 1px) {
+    .header {
+        &__logo {
+            &-link {
+                max-width: 225px;
+            }
+        }
+        &__items {
+            .menu-item {
+                margin-right: 20px;
+                &::after {
+                    height: 72px;
+                }
+            }
+        }
+    }
 }
 
 @media screen and (max-width: $lg) {
@@ -138,7 +201,7 @@
             height: 100%;
             display: flex;
             align-items: center;
-            justify-content: center;
+            padding-top: 150px;
             flex-direction: column;
             opacity: 0;
             transform: translateX(-20px);
@@ -155,9 +218,15 @@
                 top: 0;
                 left: 0;
                 width: 0;
-                height: 100%;
+                height: 55px;
                 background-color: #fff;
                 border-radius: 0 10px 10px 0;
+            }
+            &:hover {
+                &::after {
+                    top: 0;
+                    width: 100%;
+                }
             }
         }
         .menu,
@@ -169,6 +238,7 @@
         .current-menu-item {
             &::after {
                 width: 100%;
+                top: 0;
             }
         }
         .menu-btn {
@@ -179,13 +249,97 @@
         &__bottom {
             margin-left: 0;
         }
+
+
+
+
+
+        #menu-item-186 {
+            position: relative;
+            cursor: pointer;
+            text-align: center;
+            &::after {
+                display: none;
+            }
+            a {
+                position: relative;
+                z-index: 1;
+                padding: 0 10px;
+                &::after {
+                    content: '';
+                    position: absolute;
+                    top: -10px;
+                    left: 0;
+                    width: 0;
+                    height: 55px;
+                    background-color: #fff;
+                    border-radius: 0 10px 10px 0;
+                    transition: all .2s ease-in-out;
+                    z-index: -1;
+                }
+                &:hover {
+                    &::after {
+                        width: 100%;
+                    }
+                }
+            }
+
+            
+        }
+        .sub-menu {
+            position: relative;
+            top: auto;
+            bottom: 0;
+            left: -0;
+            width: 100%;
+            background-color: rgba(223, 177, 52, 0.95);
+            padding: 0;
+            border-radius: 15px;
+            box-shadow: 0 0 10px 0 rgba(189, 135, 29, .6);
+            transform-origin: top center;
+            transform: scale(1);
+            transition: all .3s ease-in-out;
+            height: 0;
+            overflow: hidden;
+            .menu-item {
+                text-align: center;
+                padding-left: 20px;
+                padding-right: 20px;
+                a {
+                    &::after {
+                        display: none;
+                    }
+                }
+                &:first-child {
+                    margin-bottom: 0;
+                }
+                &::after {
+                    display: none;
+                }
+                &:hover {
+                    color: rgb(189, 135, 29);
+                }
+    
+                a {
+                    display: inline-block;
+                    width: 100%;
+                }
+            }
+    
+            &.active {
+                height: 120px;
+                transform: translateY(23px);
+            }
+        }
     }
+    
 }
+
 @media screen and (max-width: $md) {
     .header {
         &__nav {
             &.active {
-                width: 60%;
+                width: 70%;
             }
         }
         height: 570px;
@@ -205,6 +359,10 @@
 @media screen and (max-width: $sm) {
     .header {
         height: 385px;
+
+        &__items {
+            padding-top: 50px;
+        }
         &__nav {
             &.active {
                 width: 100%;
@@ -226,6 +384,12 @@
                 display: none;
             }
         }
+    }
+}
+
+@media screen and (max-width: 400px) {
+    .header .sub-menu.active {
+        height: 140px;
     }
 }
 
